--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
     "build:analize": "cross-env ANALIZE=true NODE_ENV=production yarn build:watch",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coveralls": "jest --coverage --collectCoverageFrom src/**/*.{js} && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "test:coveralls": "jest --coverage --collectCoverageFrom=src/**/*.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "lint": "eslint src",
     "lint:staged": "lint-staged",
     "clear:build": "rimraf '{dist,lib}'",
