--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react-notification": "^6.8.4",
     "react-overlays": "^0.7.0",
     "react-redux": "^5.0.7",
-    "react-virtualized": "^9.20.0",
+    "react-virtualized": "9.20.0",
     "redux": "^3.0.4",
     "redux-actions-assertions": "^1.3.0",
     "redux-thunk": "^1.0.0",
