--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "styled-jss": "^2.2.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "cpy-cli": "^2.0.0",
     "es5-shim": "^4.1.10",
     "es6-shim": "^0.32.2",
@@ -60,16 +60,14 @@
     "karma-mocha": "^0.1.10",
     "karma-mocha-reporter": "^2.0.3",
     "karma-sourcemap-loader": "^0.3.5",
-    "karma-webpack": "^1.5.1",
+    "karma-webpack": "^4.0.2",
     "lint-staged": "^7.2.0",
     "mocha": "^5.0.4",
     "node-libs-browser": "^0.5.2",
     "prettier": "^1.13.5",
     "react-addons-test-utils": "^0.14.0",
-    "react-styleguidist": "^5.1.1",
     "svgo": "^0.6.0",
-    "webpack": "^1.10.1",
-    "webpack-dev-server": "^1.10.1"
+    "webpack": "^4.41.5"
   },
   "scripts": {
     "all": "yarn lint && yarn test && yarn build",
@@ -77,7 +75,6 @@
     "build": "yarn clean && yarn svg && yarn build:lib",
     "build:lib": "babel src --out-dir lib",
     "build:lib:watch": "babel src --out-dir lib --watch",
-    "start": "NODE_ENV=development webpack-dev-server --hot",
     "lint": "eslint ./src --fix",
     "precommit": "lint-staged",
     "svg": "yarn svg:copy && yarn svg:export",
@@ -85,7 +82,6 @@
     "svg:export": "babel-node ./bin/generateIconsIndex.js",
     "test": "karma start",
     "test:watch": "NODE_ENV=test karma start",
-    "sg": "styleguidist server",
     "prepublishOnly": "yarn all"
   },
   "lint-staged": {
