--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "random-js": "^1.0.8",
     "raven-js": "^3.22.1",
     "react": "^16.7.0",
-    "react-a11y-dialog": "2.0.0",
+    "react-a11y-dialog": "^4.1.1",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
