--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "node": "^12"
   },
   "dependencies": {
-    "babel-plugin-macros": "^2.2.2",
-    "babel-runtime": "^6.25.0",
+    "babel-plugin-macros": "^2.8.0",
     "classnames": "^2.2.5",
     "color": "^0.10.1",
     "common-tags": "^1.4.0",
@@ -69,21 +68,27 @@
     "window-location-origin": "^0.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/node": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-stage-0": "^7.8.3",
     "autoprefixer-loader": "^2.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^6.2.8",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "babel-macros": "^2.0.0",
-    "babel-plugin-react-intl": "^2.2.0",
-    "babel-plugin-rewire": "^1.1.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-react-intl": "^7.5.7",
+    "babel-plugin-rewire": "^1.2.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
-    "babel-plugin-transform-react-stateless-component-name": "^1.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-plugin-transform-react-stateless-component-name": "^1.1.2",
     "bluebird": "^3.5.1",
     "copy-webpack-plugin": "^4.0.1",
     "cpy-cli": "^1.0.1",
@@ -121,9 +126,10 @@
     "svgo-loader": "^1.1.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.6",
-    "webpack": "^2.6.1",
+    "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "start:dev": "webpack-dev-server --host 0.0.0.0 --port 8081 --inline",
