--- a/babel.config.json
+++ b/babel.config.json
@@ -6,6 +6,7 @@
     "@babel/plugin-proposal-export-default-from",
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    "@babel/plugin-transform-runtime",
     "transform-react-stateless-component-name",
     [
       "react-intl",
