--- a/package.json
+++ b/package.json
@@ -75,12 +75,15 @@
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-stage-0": "^7.8.3",
+    "@testing-library/jest-dom": "^5.7.0",
     "autoprefixer-loader": "^2.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "babel-macros": "^2.0.0",
     "babel-plugin-react-intl": "^7.5.7",
@@ -110,9 +113,8 @@
     "http-mitm-proxy": "^0.7.0",
     "husky": "^0.14.3",
     "idempotent-babel-polyfill": "^7.0.0",
-    "jest": "^22.4.3",
-    "jest-dom": "^1.3.2",
-    "jest-localstorage-mock": "^2.2.0",
+    "jest": "^26.0.1",
+    "jest-localstorage-mock": "^2.4.2",
     "json-loader": "^0.5.2",
     "lint-staged": "^7.2.0",
     "minimist": "^1.2.0",
@@ -176,6 +178,9 @@
       "<rootDir>/lib/",
       "/data/"
     ],
+    "transform": {
+      "^.+\\.js?$": "babel-jest"
+    },
     "testURL": "http://www.example.com",
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/jest-mocks/fileMock.js"
