--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "grape-browser": "^3.23.4",
     "grape-js-emoji": "^3.4.0",
     "grape-theme": "^3.5.0",
-    "grape-web": "^1.11.2",
+    "grape-web": "^1.11.2-18838.0.0",
     "history": "^4.7.2",
     "html5-notification": "^3.0.0",
     "image-zoom": "ubergrape/image-zoom",
