Use 3.x grape-theme

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "component-query": "^0.0.3",
     "emojione": "^1.4.0",
     "grape-js-emoji": "^3.4.0",
-    "grape-theme": "^3.4.1",
+    "grape-theme": "3.x",
     "grape-web": "^1.11.2",
     "images-loader": "^0.1.2",
     "keyname": "^0.1.0",
