--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "grape-browser": "^3.24.6",
     "grape-js-emoji": "^3.4.0",
     "grape-theme": "^3.6.0",
-    "grape-web": "^1.12.0",
+    "grape-web": "^1.13.0-beta.1",
     "history": "^4.7.2",
     "html5-notification": "^3.0.0",
     "image-zoom": "ubergrape/image-zoom",
