--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grape-browser",
-  "version": "3.25.0",
+  "version": "3.26.0-alpha.1",
   "main": "lib/index.js",
   "files": [
     "lib"
