--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grape-web-client",
   "description": "",
-  "version": "2.19.0-unicorn",
+  "version": "2.20.0-beta.1",
   "repository": "ubergrape/grape-web-client.git",
   "keywords": [],
   "engines": {
