--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node": "^14"
   },
   "dependencies": {
+    "@react-aria/overlays": "^3.6.1",
+    "aurora": "git://github.com/ubergrape/grape-ds.git#npm",
     "babel-plugin-macros": "^2.2.2",
     "babel-runtime": "^6.25.0",
     "classnames": "^2.2.5",
