--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "node": "^14"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.10",
     "@react-aria/overlays": "^3.6.1",
     "@react-stately/overlays": "^3.1.1",
     "@ubergrape/aurora-ui": "^0.0.5",
-    "babel-plugin-macros": "^2.2.2",
-    "babel-runtime": "^6.25.0",
     "classnames": "^2.2.5",
     "color": "^0.10.1",
     "common-tags": "^1.4.0",
@@ -72,26 +71,32 @@
     "window-location-origin": "^0.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/node": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/plugin-proposal-export-default-from": "^7.12.13",
+    "@babel/plugin-proposal-export-namespace-from": "^7.12.13",
+    "@babel/plugin-transform-react-constant-elements": "^7.13.10",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-stage-0": "^7.8.3",
+    "@testing-library/jest-dom": "^5.11.9",
     "autoprefixer-loader": "^2.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^6.2.8",
-    "babel-macros": "^2.0.0",
-    "babel-plugin-react-intl": "^2.2.0",
-    "babel-plugin-rewire": "^1.1.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
-    "babel-plugin-transform-react-stateless-component-name": "^1.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-macros": "^3.0.1",
+    "babel-plugin-react-intl": "^3.0.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-plugin-transform-react-stateless-component-name": "^1.1.2",
     "bluebird": "^3.5.1",
     "copy-webpack-plugin": "^4.0.1",
     "cpy-cli": "^1.0.1",
     "cross-env": "^5.0.0",
-    "css-loader": "^0.15.6",
+    "css-loader": "^5.1.2",
     "duplicate-package-checker-webpack-plugin": "^2.1.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -108,33 +113,34 @@
     "http-mitm-proxy": "^0.8.2",
     "husky": "^0.14.3",
     "idempotent-babel-polyfill": "^7.0.0",
-    "jest": "^22.4.3",
-    "jest-dom": "^1.3.2",
-    "jest-localstorage-mock": "^2.2.0",
+    "jest": "^26.6.3",
+    "jest-localstorage-mock": "^2.4.8",
     "json-loader": "^0.5.2",
     "lint-staged": "^7.2.0",
+    "lodash-webpack-plugin": "^0.11.6",
     "minimist": "^1.2.0",
     "prettier": "^1.19.1",
     "raw-loader": "^0.5.1",
     "react-testing-library": "^4.1.2",
     "rimraf": "^2.6.1",
     "sinon": "^6.1.0",
-    "style-loader": "^0.12.3",
+    "style-loader": "^2.0.0",
     "svgo": "^0.5.6",
     "svgo-loader": "^1.1.0",
-    "uglifyjs-webpack-plugin": "^0.4.6",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^0.5.6",
-    "webpack": "^2.6.1",
+    "webpack": "^4.42.2",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "start:dev": "webpack-dev-server --host 0.0.0.0 --port 8081 --inline",
+    "start:dev": "webpack serve --host 0.0.0.0 --port 8081 --inline",
     "start:dev:full": "cross-env APP=full yarn start:dev",
     "start:dev:embedded": "cross-env APP=embedded yarn start:dev",
     "start:dev:all": "yarn start:dev",
     "start:proxy": "node ./bin/proxy.js",
-    "build": "yarn clear:build && yarn build:lib && webpack --bail",
+    "build": "yarn clear:build && yarn build:lib && webpack",
     "build:lib": "babel src --out-dir lib",
     "build:watch": "webpack --progress --colors --watch",
     "build:analize": "cross-env ANALIZE=true NODE_ENV=production yarn build:watch",
