--- a/package.json
+++ b/package.json
@@ -127,7 +127,7 @@
     "style-loader": "^2.0.0",
     "svgo": "^0.5.6",
     "svgo-loader": "^1.1.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^0.5.6",
     "webpack": "^4.42.2",
     "webpack-bundle-analyzer": "^3.3.2",
