--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grape-web-client",
   "description": "",
-  "version": "3.0.0-unicorn-rc.2",
+  "version": "3.0.0-rc.3",
   "repository": "ubergrape/grape-web-client.git",
   "keywords": [],
   "engines": {
