--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "workspaces": ["grape-web-client", "grape-browser"],
+  "workspaces": ["grape-web-client", "grape-browser", "grape-web"],
   "devDependencies": {
     "lerna": "^4.0.0",
     "lerna-wizard": "^1.1.1"
