--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.9.1",
     "extract-text-webpack-plugin": "^2.1.2",
+    "faker": "^5.5.3",
     "file-loader": "^0.8.4",
     "glob": "^7.0.6",
     "html-loader": "^0.5.5",
