--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/plugin-proposal-export-default-from": "^7.12.13",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
+    "@babel/runtime": "^7.14.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-react-intl": "^3.0.1",
@@ -48,33 +49,33 @@
     "cross-env": "^5.0.0",
     "custom-event-polyfill": "^0.2.1",
     "document-register-element": "^0.1.8",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-config-ubergrape": "^5.4.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "expect.js": "^0.3.1",
     "font-awesome": "^4.3.0",
     "glob": "^7.0.6",
     "husky": "^0.14.3",
     "json-loader": "^0.5.1",
-    "karma": "^5.0.5",
+    "karma": "^6.3.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
-    "lint-staged": "^7.2.0",
-    "mocha": "^7.1.2",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-webpack": "^5.0.0",
+    "lint-staged": "^11.0.0",
+    "mocha": "^9.0.0",
     "node-libs-browser": "^0.5.2",
-    "prettier": "^1.13.5",
+    "prettier": "^2.3.1",
     "raw-loader": "^0.5.1",
     "react-styleguidist": "^9.0.4",
-    "webpack": "^4.28.4"
+    "webpack": "^5.38.1"
   },
   "scripts": {
     "all": "yarn test && yarn build && yarn i18n:export",
@@ -83,7 +84,7 @@
     "build:i18n": "yarn clear:i18n && yarn build && yarn i18n:export",
     "lint": "eslint src",
     "emoji": "bin/emoji",
-    "test:watch": "cross-env NODE_ENV=test karma start",
+    "test:watch": "cross-env NODE_ENV=testing karma start",
     "test": "cross-env SINGLE_RUN=true NODE_ENV=testing karma start",
     "clear:lib": "rimraf './lib/*'",
     "clear:i18n": "rimraf './i18n/{src,export}'",
