--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "devDependencies": {
     "lerna": "^4.0.0",
     "lerna-wizard": "^1.1.1"
+  },
+  "scripts": {
+    "test": "lerna run test",
+    "test:coveralls": "lerna run test:coveralls"
   }
 }
