--- a/packages/grape-web-client/package.json
+++ b/packages/grape-web-client/package.json
@@ -41,6 +41,7 @@
     "markdown-it": "^8.4.2",
     "markdown-it-emoji": "^1.4.0",
     "markdown-react-js": "^1.0.2",
+    "mockdate": "^3.0.5",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.4",
     "mousetrap": "^1.5.3",
