--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "lerna": "^4.0.0",
     "lerna-wizard": "^1.1.1"
