--- a/packages/grape-web-client/package.json
+++ b/packages/grape-web-client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grape-web-client",
   "description": "",
-  "version": "3.2.0",
+  "version": "3.2.0-unicorn",
   "repository": "ubergrape/grape-web-client.git",
   "keywords": [],
   "engines": {
